switch to webxdc-dev emulator
also improve the template with example css and js files

--- a/jszip.config.json
+++ b/jszip.config.json
@@ -9,7 +9,8 @@
   ],
   "force": true,
   "ignoreEntries": [
-    "*.map"
+    "*.map",
+    "*~"
   ],
   "mode": "add",
   "outputEntry": "dist/app.xdc",
