improve automatic bundling of the .xdc file

--- a/jszip.config.json
+++ b/jszip.config.json
@@ -1,12 +1,7 @@
 {
   "compressionLevel": 9,
   "dereferenceLinks": true,
-  "entries": [
-    "dist/assets",
-    "dist/index.html",
-    "icon.png",
-    "manifest.toml"
-  ],
+  "entries": ["dist/*"],
   "force": true,
   "ignoreEntries": [
     "*.map",
