use vite-plugin-zip-pack

--- a/.github/workflows/release-webxdc.yml
+++ b/.github/workflows/release-webxdc.yml
@@ -34,4 +34,4 @@ jobs:
             Auto-generated release
           prerelease: ${{ contains(github.event.ref, '-beta') }}
           fail_on_unmatched_files: true
-          files: dist/*.xdc
+          files: dist-xdc/*.xdc
