--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "private": true,
+  "name": "webxdc-vite",
+  "version": "1.0.0",
   "packageManager": "pnpm@8.6.1",
   "scripts": {
-    "build": "vite build && jszip-cli -c jszip.config.json",
+    "build": "vite build",
     "dev-vite": "vite --port 3000",
     "dev": "concurrently \"pnpm dev-vite\" \"webxdc-dev run http://localhost:3000\""
   },
   "devDependencies": {
-    "@ffflorian/jszip-cli": "^3.4.1",
-    "eruda": "^3.0.0",
     "concurrently": "^8.1.0",
+    "eruda": "^3.0.0",
     "vite": "^4.3.2",
-    "webxdc-dev": "^0.16.0"
+    "vite-plugin-zip-pack": "^1.0.5",
+    "webxdc-dev": "^0.17.0"
   }
 }
