--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "private": true,
-  "name": "webxdc-vite",
-  "version": "1.0.0",
   "packageManager": "pnpm@8.6.1",
   "scripts": {
     "build": "vite build",
@@ -15,6 +13,7 @@
     "eruda": "^3.0.0",
     "jsdom": "^22.1.0",
     "prettier": "2.8.8",
+    "toml": "^3.0.0",
     "vite": "^4.3.2",
     "vite-plugin-zip-pack": "^1.0.5",
     "vitest": "^0.32.2",
