move format checking to its own script

--- a/.github/workflows/release-webxdc.yml
+++ b/.github/workflows/release-webxdc.yml
@@ -21,6 +21,7 @@ jobs:
           cache: pnpm
 
       - run: pnpm i
+      - run: pnpm format:check
       - run: pnpm test
       - run: pnpm build
 
