--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,16 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          cache: pnpm
-
+      - run: npm install -g pnpm
       - run: pnpm i
       - run: pnpm format:check
       - run: pnpm test
