--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm install -g pnpm
       - run: pnpm i
-      - run: pnpm format:check
-      - run: pnpm test
+      - run: pnpm check
+      - run: pnpm build
