--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm install -g pnpm
       - run: pnpm i
-      - run: pnpm format:check
-      - run: pnpm test
+      - run: pnpm check
       - run: pnpm build
 
       - name: Release
