--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "private": true,
   "scripts": {
-    "build": "vite build",
     "dev-mini": "vite --port 3000",
     "dev": "concurrently \"npm run dev-mini\" \"webxdc-dev run http://localhost:3000\"",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "test": "vitest"
+    "check": "prettier --check .",
+    "build": "vite build"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^4.0.2",
     "concurrently": "^8.1.0",
     "eruda": "^3.0.0",
     "jsdom": "^22.1.0",
-    "prettier": "2.8.8",
+    "prettier": "^3.0.3",
     "toml": "^3.0.0",
     "vite": "^4.3.2",
     "vite-plugin-zip-pack": "^1.0.5",
-    "vitest": "^0.32.2",
     "webxdc-dev": "^0.17.0"
   }
 }
