--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "@vitejs/plugin-legacy": "^4.0.2",
     "concurrently": "^8.1.0",
-    "eruda": "^3.0.0",
-    "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
-    "toml": "^3.0.0",
     "vite": "^4.3.2",
-    "vite-plugin-zip-pack": "^1.0.5",
-    "webxdc-dev": "^0.17.0"
+    "webxdc-vite-plugins": "github:webxdc/webxdc-vite-plugins"
   }
 }
