--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^8.1.0",
     "prettier": "^3.0.3",
     "vite": "^4.3.2",
+    "webxdc-dev": "^0.17.0",
     "webxdc-vite-plugins": "github:webxdc/webxdc-vite-plugins"
   }
 }
