--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite --port 3000",
     "emulator": "concurrently \"npm start\" \"webxdc-dev run http://localhost:3000\"",
@@ -8,10 +9,10 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "prettier": "^3.3.2",
-    "vite": "^4.5.3",
-    "webxdc-dev": "^0.17.0",
-    "webxdc-vite-plugins": "github:webxdc/webxdc-vite-plugins"
+    "concurrently": "latest",
+    "prettier": "latest",
+    "vite": "latest",
+    "webxdc-dev": "latest",
+    "@webxdc/vite-plugins": "latest"
   }
 }
